git config user name 변경 테스트

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			// babel 적용 후
 			const App = () => <h1>HELLO REACT WORLD</h1>;
 			ReactDOM.render(<App />, document.getElementById("root"));
+
+			// git config test
 		</script>
 	</body>
 </html>
