--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<title>React App Without CRA</title>
 		<script src="https://unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
 		<script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
-		<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+		<!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="text/babel">
+		<script src="dist/bundle.js">
 			// babel 적용 전(JSX 없는 바닐라 js)
 
 			// const App = () =>
