5. 개발 서버 적용하기

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			// );
 
 			// babel 적용 후
-			const App = () => <h1>HELLO REACT WORLD</h1>;
+			const App = () => <h1>HELLO REACT WORLD {process.env.TEST_API_URL}</h1>;
 			ReactDOM.render(<App />, document.getElementById("root"));
 		</script>
 	</body>
